syntax = "proto3";

package analytics.v1;

option go_package = "github.com/bezzang-dev/go-url-shortener";

service AnalyticsService {
    rpc LogAccess(AccessLogRequest) returns (AccessLogResponse);
}

message AccessLogRequest {
    string short_code = 1;
    string client_ip = 2;
    string user_agent = 3;
    int64 accessed_at = 4;
}

message AccessLogResponse {
    bool success = 1;
}